feat: download and extract javafx if needed